fix: always visible header

--- a/tienda/static/css/base.css
+++ b/tienda/static/css/base.css
@@ -21,6 +21,7 @@ header {
     text-align: center;
     position: fixed;
     width: 100%;
+    z-index: 10;
 }
 
 
@@ -89,7 +90,7 @@ main {
     margin-top: calc(var(--header-height, 90px));
 }
 
-
+/* FOOTER */
 /*
 footer {
     background: linear-gradient(360deg, #e519f0 0%, #c639ea 50%, #7729d7 100%);
@@ -98,6 +99,15 @@ footer {
     padding: 10px 0;
 }
 */
+footer {
+    background-color: #e2e2e2;
+    color: #000;
+    text-align: center;
+    padding: 10px 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
 
 .button {
     background-color: #8a2be2;
